# radiator_control

./: Dockerfile  KONZEPT.md  README.md  docker-compose.yml  pyproject.toml  repository.yaml  standalone_config.example.yaml
addon/: DOCS.md  Dockerfile  build.yaml  config.yaml
addon/rootfs/: run.sh
addon/rootfs/app/: addon_main.py
addon/templates/: index.html
radiator-control/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  main.py  requirements.txt
radiator-control/rootfs/app/: addon_main.py
radiator-control/src/: __init__.py  climate_entity.py  experiments.py  ha_client.py  utils.py
radiator-control/static/: app.js  style.css
radiator-control/templates/: index.html
src/: database.py  model.py  mpc_controller.py
